GC README.md